--- a/UnitTest/CMakeLists.txt
+++ b/UnitTest/CMakeLists.txt
@@ -31,57 +31,58 @@ if(USE_METAL AND APPLE)
     )
     # Horrible METAL library loding system, just use the default.metallib
     # Compile Metal shaders
-    # set(METAL_SHADER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Backends)
-    # set(METAL_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
-    #
-    # # Find all .metal files
-    # file(GLOB METAL_SOURCES ${METAL_SHADER_DIR}/*.metal)
-    #
-    # # Create a list to hold the compiled .air files
-    # set(METAL_AIR_FILES)
-    #
-    # # Compile each .metal file to .air
-    # foreach(METAL_SOURCE ${METAL_SOURCES})
-    #     get_filename_component(METAL_NAME ${METAL_SOURCE} NAME_WE)
-    #     set(AIR_FILE ${METAL_OUTPUT_DIR}/${METAL_NAME}.air)
-    #
-    #     add_custom_command(
-    #         OUTPUT ${AIR_FILE}
-    #         COMMAND xcrun -sdk macosx metal -c ${METAL_SOURCE} -o ${AIR_FILE}
-    #         DEPENDS ${METAL_SOURCE}
-    #         COMMENT "Compiling Metal shader: ${METAL_NAME}.metal"
-    #         VERBATIM
-    #     )
-    #
-    #     list(APPEND METAL_AIR_FILES ${AIR_FILE})
-    # endforeach()
-    #
-    # # Create the Metal library
-    # set(METAL_LIBRARY ${METAL_OUTPUT_DIR}/default.metallib)
-    # add_custom_command(
-    #     OUTPUT ${METAL_LIBRARY}
-    #     COMMAND xcrun -sdk macosx metallib ${METAL_AIR_FILES} -o ${METAL_LIBRARY}
-    #     DEPENDS ${METAL_AIR_FILES}
-    #     COMMENT "Creating Metal library: default.metallib"
-    #     VERBATIM
-    # )
-    #
-    # # Create a custom target for Metal shaders
-    # add_custom_target(metal_shaders ALL DEPENDS ${METAL_LIBRARY})
-    #
-    # # Copy the Metal library to the test working directory
-    # add_custom_command(
-    #     TARGET metal_shaders POST_BUILD
-    #     COMMAND ${CMAKE_COMMAND} -E copy ${METAL_LIBRARY} ${CMAKE_BINARY_DIR}/src/Tests/
-    #     COMMENT "Copying Metal library to test directory"
-    #     VERBATIM
-    # )
+    set(METAL_SHADER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Kernels)
+    set(METAL_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
+
+    # Find all .metal files
+    file(GLOB METAL_SOURCES ${METAL_SHADER_DIR}/*.metal)
+
+    # Create a list to hold the compiled .air files
+    set(METAL_AIR_FILES)
+
+    # Compile each .metal file to .air
+    foreach(METAL_SOURCE ${METAL_SOURCES})
+        get_filename_component(METAL_NAME ${METAL_SOURCE} NAME_WE)
+        set(AIR_FILE ${METAL_OUTPUT_DIR}/${METAL_NAME}.air)
+
+        add_custom_command(
+            OUTPUT ${AIR_FILE}
+            COMMAND xcrun -sdk macosx metal -c ${METAL_SOURCE} -o ${AIR_FILE}
+            DEPENDS ${METAL_SOURCE}
+            COMMENT "Compiling Metal shader: ${METAL_NAME}.metal"
+            VERBATIM
+        )
+
+        list(APPEND METAL_AIR_FILES ${AIR_FILE})
+    endforeach()
+
+    # Create the Metal library
+    set(METAL_LIBRARY ${METAL_OUTPUT_DIR}/default.metallib)
+    add_custom_command(
+        OUTPUT ${METAL_LIBRARY}
+        COMMAND xcrun -sdk macosx metallib ${METAL_AIR_FILES} -o ${METAL_LIBRARY}
+        DEPENDS ${METAL_AIR_FILES}
+        COMMENT "Creating Metal library: default.metallib"
+        VERBATIM
+    )
+
+    # Create a custom target for Metal shaders
+    add_custom_target(metal_shaders ALL DEPENDS ${METAL_LIBRARY})
+
+    # Copy the Metal library to the test working directory
+    add_custom_command(
+        TARGET metal_shaders POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${METAL_LIBRARY} ${CMAKE_CURRENT_BINARY_DIR}/
+        COMMENT "Copying Metal library to test directory"
+        VERBATIM
+    )
 
     # Metal backend tests
     add_executable(arbd_test_metal
         Backends/metal_manager.cpp
         Backends/metal_backend.cpp
         Backends/generic_Buffer.cpp
+        Kernels/metal_kernels.cpp
         ${CMAKE_SOURCE_DIR}/extern/Catch2/extras/catch_amalgamated.cpp)
     target_include_directories(arbd_test_metal PRIVATE ${METAL_TEST_INCLUDES})
     target_link_libraries(arbd_test_metal PRIVATE ${METAL_TEST_LIBS})
@@ -91,7 +92,7 @@ if(USE_METAL AND APPLE)
 
     add_test(NAME Metal_Tests COMMAND arbd_test_metal)
     set_tests_properties(Metal_Tests PROPERTIES
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/src/Tests
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     )
 
     install(TARGETS arbd_test_metal)
@@ -105,7 +106,7 @@ if(USE_METAL AND APPLE)
 
     add_test(NAME Metal_Math_Tests COMMAND arbd_test_metal_math)
     set_tests_properties(Metal_Math_Tests PROPERTIES
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/src/Tests
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     )
 
     install(TARGETS arbd_test_metal_math)
@@ -192,7 +193,7 @@ if(USE_SYCL_ACPP OR USE_SYCL_ICPX)
     # Set environment variables for SYCL test execution
     set_tests_properties(SYCL_Tests PROPERTIES
         ENVIRONMENT "ACPP_TARGETS=omp;SYCL_DEVICE_FILTER=cpu;ACPP_DEBUG=1"
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/src/Tests
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     )
 
     install(TARGETS arbd_test_sycl)
@@ -202,7 +203,7 @@ if(USE_SYCL_ACPP OR USE_SYCL_ICPX)
     add_test(NAME SYCL_Backend_Tests COMMAND arbd_test_sycl_backend)
     set_tests_properties(SYCL_Backend_Tests PROPERTIES
         ENVIRONMENT "ACPP_TARGETS=omp;SYCL_DEVICE_FILTER=cpu;ACPP_DEBUG=1"
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/src/Tests
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     )
 
     install(TARGETS arbd_test_sycl_backend)
@@ -211,7 +212,7 @@ if(USE_SYCL_ACPP OR USE_SYCL_ICPX)
     add_test(NAME SYCL_Math_Tests COMMAND arbd_test_sycl_math)
     set_tests_properties(SYCL_Math_Tests PROPERTIES
         ENVIRONMENT "ACPP_TARGETS=omp;SYCL_DEVICE_FILTER=cpu;ACPP_DEBUG=1"
-        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/src/Tests
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     )
 
     install(TARGETS arbd_test_sycl_math)
